deployment/frontend.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: trainstation
  
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: ts-ui-dashboard
  namespace: trainstation
spec:
  selector:
    matchLabels:
      app: ts-ui-dashboard
  replicas: 1
  template:
    metadata:
      labels:
        app: ts-ui-dashboard
    spec:
      containers:
      - name: ts-ui-dashboard
        image: olaoyefaith/ts-ui-dashboard:20230920132426
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: 50m
            memory: 100Mi
          limits:
            cpu: 500m
            memory: 500Mi

---

apiVersion: v1
kind: Service
metadata:
  name: ts-ui-dashboard
  namespace: trainstation
spec:
  type: NodePort
  ports:
    - name: http
      port: 8080
      nodePort: 32677
  selector:
   app: ts-ui-dashboard
---
